--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,13 @@
 [package]
 name = "unreal-doc"
-version = "1.0.9"
-authors = ["Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
-edition = "2021"
+version = "1.1.0"
+authors = ["NB", "Patryk 'PsichiX' Budzynski <psichix@gmail.com>"]
+edition = "2024"
 description = "Tool for generating documentation from Unreal C++ sources."
 license = "MIT OR Apache-2.0"
-homepage = "https://github.com/PsichiX/unreal-doc"
-repository = "https://github.com/PsichiX/unreal-doc"
-documentation = "https://docs.rs/unreal-doc"
+homepage = "https://github.com/noirb/unreal-doc"
+repository = "https://github.com/noirb/unreal-doc"
+documentation = "https://github.com/noirb/unreal-doc"
 readme = "README.md"
 exclude = ["resources/"]
 
@@ -16,7 +16,7 @@ clap = "3"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 toml = "0.7"
-pest = "2.1"
-pest_derive = "2.1"
+pest = "2.8"
+pest_derive = "2.8"
 fs_extra = "1.2"
 regex = "1"
